Fixed menu button on mobile

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -129,7 +129,7 @@
     --menu-icon-separation: 1em;
 
     .left-sidebar {
-        max-width: 15%;
+        width: 15%;
     }
 
     .right-sidebar {
